--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <div class="container">
         <h1>Arrange the Songs in the Correct Order</h1>
-        <div id="songs-list">
-            <div class="song" data-song="1">Up on the House Top - Gene Autry</div>
-            <div class="song" data-song="2">Up on the Roof - The Drifters</div>
-            <div class="song" data-song="3">Down by the River - Neil Young</div>
-            <div class="song" data-song="4">Down on the Corner - CCR</div>
-            <div class="song" data-song="5">Left in the Dark - Barbra Streisand</div>
-            <div class="song" data-song="6">Fight for Your Right - Beastie Boys</div>
-            <div class="song" data-song="7">She Left Me on Friday - Shed Seven</div>
-            <div class="song" data-song="8">Everything in its Right Place - Radiohead</div>
-            <div class="song" data-song="9">B&E - Nothing</div>
-            <div class="song" data-song="10">A Sky Full of Stars - Coldplay</div>
-            <div class="song" data-song="11">Start the Healing - Korn</div>
+        <div id="songs-list" class="sortable-list">
+            <div class="song" draggable="true" data-song="1">Up on the House Top - Gene Autry</div>
+            <div class="song" draggable="true" data-song="2">Up on the Roof - The Drifters</div>
+            <div class="song" draggable="true" data-song="3">Down by the River - Neil Young</div>
+            <div class="song" draggable="true" data-song="4">Down on the Corner - CCR</div>
+            <div class="song" draggable="true" data-song="5">Left in the Dark - Barbra Streisand</div>
+            <div class="song" draggable="true" data-song="6">Fight for Your Right - Beastie Boys</div>
+            <div class="song" draggable="true" data-song="7">She Left Me on Friday - Shed Seven</div>
+            <div class="song" draggable="true" data-song="8">Everything in its Right Place - Radiohead</div>
+            <div class="song" draggable="true" data-song="9">B&E - Nothing</div>
+            <div class="song" draggable="true" data-song="10">A Sky Full of Stars - Coldplay</div>
+            <div class="song" draggable="true" data-song="11">Start the Healing - Korn</div>
         </div>
         <button id="checkOrder">Check Order</button>
         <div id="result"></div>
