--- a/index.html
+++ b/index.html
@@ -9,23 +9,13 @@
 <body>
     <div class="container">
         <h1>Arrange the Songs in the Correct Order</h1>
+        <p>Drag and drop the songs to match the correct "Song Order" (1–11). Only these 11 are part of the puzzle, but all songs are displayed.</p>
         <div id="songs-list" class="sortable-list">
-            <div class="song" draggable="true" data-song="1">Up on the House Top - Gene Autry</div>
-            <div class="song" draggable="true" data-song="2">Up on the Roof - The Drifters</div>
-            <div class="song" draggable="true" data-song="3">Down by the River - Neil Young</div>
-            <div class="song" draggable="true" data-song="4">Down on the Corner - CCR</div>
-            <div class="song" draggable="true" data-song="5">Left in the Dark - Barbra Streisand</div>
-            <div class="song" draggable="true" data-song="6">Fight for Your Right - Beastie Boys</div>
-            <div class="song" draggable="true" data-song="7">She Left Me on Friday - Shed Seven</div>
-            <div class="song" draggable="true" data-song="8">Everything in its Right Place - Radiohead</div>
-            <div class="song" draggable="true" data-song="9">B&E - Nothing</div>
-            <div class="song" draggable="true" data-song="10">A Sky Full of Stars - Coldplay</div>
-            <div class="song" draggable="true" data-song="11">Start the Healing - Korn</div>
+            <!-- Songs will be dynamically inserted here -->
         </div>
         <button id="checkOrder">Check Order</button>
         <div id="result"></div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
