--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Arrange the Songs in the Correct Order</h1>
         <p>Drag and drop the songs to match the correct "Song Order" (1–11). Only these 11 are part of the puzzle, but all songs are displayed.</p>
-        <div id="songs-list" class="sortable-list">
+        <div id="songs-list">
             <!-- Songs will be dynamically inserted here -->
         </div>
         <button id="checkOrder">Check Order</button>
