--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
         <p>Drag the songs into the correct order (1–11) in the right column. Only 11 songs are part of the puzzle, but all songs are shown below in random order.</p>
         <div class="columns">
             <!-- Two columns for initial songs -->
-            <div id="initial-songs" class="songs-column"></div>
+            <div id="initial-songs-left" class="songs-column"></div>
+            <div id="initial-songs-right" class="songs-column"></div>
             <div id="target-songs" class="songs-column">
                 <h3>Drop Here</h3>
-                <div id="drop-area">
-                    <!-- Empty spaces for correct order -->
-                </div>
+                <div id="drop-area"></div>
             </div>
         </div>
         <button id="checkOrder">Check Order</button>
