--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <!-- Two columns for initial songs -->
             <div id="initial-songs-left" class="songs-column"></div>
             <div id="initial-songs-right" class="songs-column"></div>
+            <!-- Third column for the drop area -->
             <div id="target-songs" class="songs-column">
                 <h3>Drop Here</h3>
                 <div id="drop-area"></div>
