--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+    <header>
+    <h1>🎄 Holiday Song Puzzle 🎵</h1>
+    <h2>Arrange the songs to unlock the code!</h2>
+</header>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
