--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="result"></div>
     </footer>
 
+    <!-- Move the script tag here -->
     <script src="scripts.js"></script>
 </body>
 </html>
