--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     </header>
 
     <div id="container">
-        <div id="initial-songs-left" class="column"></div>
-        <div id="initial-songs-right" class="column"></div>
+        <div id="initial-songs" class="column"></div>
         <div id="drop-area" class="column"></div>
     </div>
 
@@ -23,7 +22,6 @@
         <div id="result"></div>
     </footer>
 
-    <!-- Move the script tag here -->
     <script src="scripts.js"></script>
 </body>
 </html>
