--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     </header>
 
     <div id="container">
-        <div id="initial-songs" class="column"></div>
+        <div id="available-songs" class="column">
+            <div id="left-column" class="song-column"></div>
+            <div id="right-column" class="song-column"></div>
+        </div>
         <div id="drop-area" class="column"></div>
     </div>
 
