--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </header>
 
     <div id="container">
-        <div id="available-songs" class="column">
+        <div id="available-songs" class="available-songs">
             <div id="left-column" class="song-column"></div>
             <div id="right-column" class="song-column"></div>
         </div>
-        <div id="drop-area" class="column"></div>
+        <div id="drop-area" class="drop-area"></div>
     </div>
 
     <footer>
