--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
     </header>
     <div id="container">
         <!-- Two columns for songs -->
-        <div class="available-songs">
+        <div id="available-songs">
             <div class="song-column" id="column1"></div>
             <div class="song-column" id="column2"></div>
         </div>
         <!-- Drop area for ordering -->
-        <div class="drop-area" id="dropArea">
-            <!-- Drop slots will be created dynamically -->
-        </div>
+        <div class="drop-area" id="dropArea"></div>
     </div>
     <button onclick="checkOrder()">Check Order</button>
     <div id="result"></div>
