--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <header>
         <h1>Song Order Puzzle</h1>
-        <p>Drag and drop songs into the correct order to unlock the code!</p>
+        <p>Drag and drop the songs into the correct order to unlock the code!</p>
     </header>
     <div id="container">
-        <!-- Two columns for songs -->
+        <!-- Columns for songs -->
         <div id="available-songs">
             <div class="song-column" id="column1"></div>
             <div class="song-column" id="column2"></div>
         </div>
-        <!-- Drop area for ordering -->
+        <!-- Drop area for correct order -->
         <div class="drop-area" id="dropArea"></div>
     </div>
     <button onclick="checkOrder()">Check Order</button>
