--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <p>Drag and drop the songs into the correct order to unlock the code!</p>
     </header>
     <div id="container">
-        <!-- Columns for songs -->
+        <!-- Columns for available songs -->
         <div id="available-songs">
             <div class="song-column" id="column1"></div>
             <div class="song-column" id="column2"></div>
         </div>
-        <!-- Drop area for correct order -->
+        <!-- Drop area -->
         <div class="drop-area" id="dropArea"></div>
     </div>
     <button onclick="checkOrder()">Check Order</button>
